--- a/config/services.yaml
+++ b/config/services.yaml
@@ -11,8 +11,8 @@ services:
     autowire: true      # Automatically injects dependencies in your services.
     autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
-    bind:
-      string $photoDir: "%kernel.project_dir%/public/uploads/photos"
+#    bind:
+#      string $photoDir: "%kernel.project_dir%/public/uploads/photos"
 
   # makes classes in src/ available to be used as services
   # this creates a service per class whose id is the fully-qualified class name
