--- a/.env
+++ b/.env
@@ -42,3 +42,5 @@ DATABASE_URL="postgresql://postgres:postgres@sf_world_22_summer_postgresql:5432/
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+# AKISMET_KEY=5d43020ed766
