Make commant installed

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
-        "php": ">=8.0.2",
+        "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "doctrine/annotations": "^1.0",
@@ -41,8 +41,11 @@
         "symfony/twig-bundle": "6.1.*",
         "symfony/validator": "6.1.*",
         "symfony/web-link": "6.1.*",
+        "symfony/workflow": "6.1.*",
         "symfony/yaml": "6.1.*",
+        "twig/cssinliner-extra": "^3",
         "twig/extra-bundle": "^2.12|^3.0",
+        "twig/inky-extra": "^3",
         "twig/intl-extra": "^3.4",
         "twig/twig": "^2.12|^3.0"
     },
@@ -86,6 +89,13 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
+        ],
+        "tests": [
+            "symfony console doctrine:database:drop --force --env=test || true",
+            "symfony console doctrine:database:create --env=test",
+            "symfony console doctrine:migrations:migrate -n --env=test",
+            "symfony console doctrine:fixtures:load -n --env=test",
+            "symfony php bin/phpunit"
         ]
     },
     "conflict": {
@@ -93,12 +103,14 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
+            "allow-contrib": true,
             "require": "6.1.*",
             "docker": true
         }
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^6",
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "6.1.*",
         "symfony/css-selector": "6.1.*",
