--- a/.env.test
+++ b/.env.test
@@ -4,3 +4,5 @@ APP_SECRET='$ecretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
+AKISMET_KEY=5d43020ed766
+DATABASE_URL="postgresql://postgres:postgres@sf_world_22_summer_postgresql:5432/sf_world?serverVersion=13&charset=utf8"
